--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,38 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+/* ------------------- */
+/* Custom properties   */
+/* ------------------- */
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+:root {
+  /* colors */
+  --primary-background-clr: white;
+  --secondary-background-clr: #f15a26;
+  --primary-text-color: hsl(0, 0%, 0%);
+  --hover-text-color: hsl(0, 3%, 41%);
+  --active-text-color: #F15A26;
+
+  
+  /* font-sizes */
+  --fs-900: 3.5rem;
+  --fs-800: 3rem;
+  --fs-700: 2.5rem;
+  --fs-600: 2.25rem;
+  --fs-500: 2rem;
+  --fs-400: 1.75rem;
+  --fs-300: 1.5rem;
+  --fs-200: 1.25rem;
+  --fs-100: 1rem;
+
+  
+  /* font-families */
+  --ff-laila-serif: "Laila", serif;
+  --ff-sans-cond: "Barlow Condensed", sans-serif;
+  --ff-sans-normal: "Barlow", sans-serif;
+
+  --flow-space: 4rem;
+
+  --hidden-menu: 0%
+}
+*{
+  margin:0;
+  padding: 0;
 }
