--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,15 @@
     width: 100%;
     min-height: 100vh;
 
+    
+
     display: flex;
     flex-direction: column;
 
     align-items: center;
+
+
+    font-family: var(--ff-laila-serif);
+    font-size:  var(--fs-300);
+    font-weight: 700;
 }
