--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -18,7 +18,7 @@
 }
 
 
-.container_row1 {
+.headerContainer_row1 {
     width: 100%;
     height: fit-content;
     margin: 0;
@@ -28,7 +28,7 @@
 
 }
 
-.container_row2 {
+.headerContainer_row2 {
     width: 100%;
     height: fit-content;
     margin: 0;
