--- a/src/components/headerComponents/CartList.css
+++ b/src/components/headerComponents/CartList.css
@@ -1,20 +1,19 @@
-.cardListContainer{
+.cardListContainer {
     width: 5%;
     height: fit-content;
-   
 
     padding-top: 10px;
 
     position: relative;
     top: 10%;
-
 }
 
-.cardIcon{
+.cardIcon {
     width: 80%;
     z-index: -1;
 }
-.itemQty{
+
+.itemQty {
     width: 25px;
     height: 25px;
     border-radius: 50%;
@@ -30,4 +29,101 @@
     color: white;
     font-size: var(--fs-100);
     font-weight: 700;
+}
+
+.cartList {
+    visibility: hidden;
+    width: 280px;
+    height: 400px;
+    background-color: rgb(255, 255, 255);
+    box-shadow: 2px 2px 10px rgb(209, 209, 209);
+
+    position: absolute;
+    transform: translateX(-250px);
+}
+
+/* Cart List *************************************** */
+.cardListContainer:hover>.cartList {
+    visibility: visible;
+}
+
+.cartList_list {
+    width: 100%;
+    max-height: 73%;
+    overflow: auto;
+
+    /* width */
+    &::-webkit-scrollbar {
+        width: 5px;
+    }
+    /* Handle */
+    &::-webkit-scrollbar-thumb {
+        background: var(--secondary-background-clr);
+    }
+}
+
+.cartList_list-item {
+    width: 100%;
+    height: 45px;
+    background-color: antiquewhite;
+}
+
+/* ************************************************* */
+.cartList_bottom {
+    width: 100%;
+    height: 25%;
+    position: absolute;
+    bottom: 0;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+
+    border-top: 2px solid rgb(203, 203, 203);
+
+}
+
+/* ************************************************************ */
+
+.cartList_bottom-sum,
+.cartList_bottom-checkout {
+    width: 100%;
+    height: 40px;
+
+    /* border: 1px solid red; */
+}
+
+/* ************************************************************ */
+.cartList_bottom-checkout {
+    width: 80%;
+    border-radius: 10px;
+    border: none;
+    font-size: var(--fs-400);
+    color: var(--secondary-text-color);
+    background-color: var(--secondary-background-clr);
+}
+
+.cartList_bottom-checkout:hover {
+    background: var(--secondary-background-clr);
+    opacity: 0.8;
+
+}
+
+/* ************************************************************ */
+
+.cartList_bottom-sum {
+    padding: 0 30px;
+    font-size: var(--fs-400);
+
+
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+}
+
+.cartList_bottom-sumText,
+.cartList_bottom-sumPrice {
+    align-content: center;
 }
