--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -11,7 +11,8 @@
     position: absolute;
     z-index: 1;
 
-    background-color: rgba(255, 255, 255, 1) ;
+    /* background-color: rgba(255, 255, 255, 1) ; */
+    background-color: rgba(255, 255, 255, 0.25) ;
 
     border-radius: 8px;
     box-shadow: 2px 2px 20px rgb(177, 177, 177);
