--- a/src/components/headerComponents/Menu.css
+++ b/src/components/headerComponents/Menu.css
@@ -117,18 +117,29 @@
 }
 
 .productsDetail{
-    visibility: hidden;
+    visibility: visible;
     width: 300px;
     height: 300px;
     background-color: aqua;
 
     position: absolute;
     left: 290px;
-    top: 80px
+    top: 80px;
+
+    transform: rotateY(90deg);
+    /* transform: skewY(90deg); */
+opacity: 0%;
+    transition: 0.5s;
+
 }
 
 #menuTab_2:hover>.productsDetail,
 .productsDetail:hover{
     visibility: visible;
+opacity: 100%;
+
+    transform: rotateY(0deg);
+    /* transform: skewY(0deg); */
+
 }
 
