--- a/src/pages/main_pages/HomePage.css
+++ b/src/pages/main_pages/HomePage.css
@@ -3,7 +3,7 @@
     z-index: 0;
 }
 .homepage-notebookCarousel-container{
-    border: 2px solid red;
+    border: 1px solid red;
 
 }.homepage-nextPrevButton{
     display: flex;
@@ -12,4 +12,12 @@
     font-size: 20px;
     width: 10px;
     height: 10px;
+}
+.homepage-productCard-carouselImgContainer{
+    display: flex;
+    max-height: 300px;
+
+}
+.homepage-productCard-carouselImg{
+    object-fit: contain;
 }
