--- a/src/components/footerComponents/ServicesBanner.css
+++ b/src/components/footerComponents/ServicesBanner.css
@@ -19,9 +19,20 @@
 }
 
 .servicesImage{
+    cursor: pointer;
     width: 60px;
     height: 60px;
+
+    transition: 2s;
+    transform: rotate(0deg);
+
 }
+
+.servicesImage:hover{
+    transform: rotate(90deg);
+
+}
+
 
 .servicesName {
     width: 180px;
