--- a/src/components/headerComponents/CartList.css
+++ b/src/components/headerComponents/CartList.css
@@ -1,11 +1,13 @@
 .cardListContainer {
-    width: 5%;
+    width: 25%;
     height: fit-content;
 
     padding-top: 10px;
 
     position: relative;
     top: 10%;
+    border: 1px solid red;
+
 }
 
 .cardIcon {
@@ -143,8 +145,9 @@
 }
 
 .cartList_list-item-delete {
-    width: 18   px;
+    width: 18px;
     height: 18px;
+    cursor: pointer;
 }
 
 .cartList_list-item-imagebg {
