--- a/src/components/headerComponents/Menu.css
+++ b/src/components/headerComponents/Menu.css
@@ -74,7 +74,7 @@
     gap: 10px;
 }
 
-.iconRedArrow::before{
+.iconRedArrow::before {
     content: "\f105";
     font-family: "Font Awesome 5 free";
     font-weight: 900;
@@ -82,7 +82,8 @@
 
     color: var(--secondary-background-clr);
 }
-.iconBlackArrow::before{
+
+.iconBlackArrow::before {
     content: "\f105";
     font-family: "Font Awesome 5 free";
     font-weight: 900;
@@ -94,9 +95,9 @@
 }
 
 .tabLink,
-.tabLink:hover{
+.tabLink:hover {
     text-decoration: none;
- 
+
     width: 80%;
     height: 100%;
     align-content: center;
@@ -111,32 +112,37 @@
 .menuTab:hover,
 .menuTab:hover>.tabLink,
 .menuTab:hover>.iconRedArrow::before,
-.menuTab:hover>.iconBlackArrow::before{
+.menuTab:hover>.iconBlackArrow::before {
     background-color: var(--secondary-background-clr);
     color: white;
 }
 
-.productsDetail{
+.productsDetail {
     visibility: visible;
-    width: 300px;
-    height: 300px;
-    background-color: aqua;
+    width: fit-content;
+    height: fit-content;
+    padding: 20px;
+
+    background-color: rgb(255, 255, 255);
+    color: var(--primary-text-color);
+
+    display: flex;
+    gap: 20px;
 
     position: absolute;
     left: 290px;
     top: 80px;
 
     transform: rotateY(90deg);
-    /* transform: skewY(90deg); */
-opacity: 0%;
+    opacity: 0%;
     transition: 0.5s;
 
 }
 
 #menuTab_2:hover>.productsDetail,
-.productsDetail:hover{
+.productsDetail:hover {
     visibility: visible;
-opacity: 100%;
+    opacity: 100%;
 
     transform: rotateY(0deg);
     /* transform: skewY(0deg); */
