--- a/src/components/headerComponents/SearchBox.css
+++ b/src/components/headerComponents/SearchBox.css
@@ -2,6 +2,8 @@
     width: 55%;
     display: flex;
     justify-content: center;
+    border: 1px solid red;
+
 }
 
 .searchBox {
@@ -52,3 +54,4 @@
     width: 40%;
     height: 40%;
 }
+
