--- a/src/pages/main_pages/HomePage.css
+++ b/src/pages/main_pages/HomePage.css
@@ -1,11 +1,49 @@
-.section-homepage-carousel{
+.homepage-section-carousel {
     position: relative;
     z-index: 0;
 }
-.homepage-notebookCarousel-container{
-    border: 1px solid red;
 
-}.homepage-nextPrevButton{
+.homepage-section-notebook-container {
+    min-height: 540px;
+    /* max-height: 540px; */
+}
+
+.homepage-section-notebook {
+    min-height: 540px;
+}
+
+.homepage-section-notebook-right-row1 {
+    min-height: 40px;
+}
+
+.homepage-section-notebook-right-row2 {
+    min-height: 500px;
+    background: lightblue;
+    transition: all 1s;
+}
+
+.homepage-section-notebook-right-row2row {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    min-height: 500px;
+    max-height: 500px;
+    justify-content: flex-start;
+    justify-items: start;
+    padding: 0px;
+    margin: 0px;
+    /* background: lightyellow; */
+    align-items: flex-start;
+    transition: all 1s;
+
+}
+
+.homepage-section-notebook-left {
+    border: 1px solid red;
+    height: 480px;
+}
+
+.homepage-nextPrevButton {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,11 +51,17 @@
     width: 10px;
     height: 10px;
 }
-.homepage-productCard-carouselImgContainer{
+
+.homepage-productCard-carouselImgContainer {
     display: flex;
     max-height: 300px;
 
 }
-.homepage-productCard-carouselImg{
+
+.homepage-productCard-carouselImg {
     object-fit: contain;
+}
+
+.nav-item:hover {
+    cursor: pointer;
 }
