--- a/src/components/headerComponents/Logo.css
+++ b/src/components/headerComponents/Logo.css
@@ -2,13 +2,13 @@
     width: 25%;
     height: 100px;
     padding: 0;
+
+    border: 1px solid red;
 }
 
 .logoImage {
     width: 100%;
     height: 100%;
-
-    border-radius: 10px;
 
     object-fit: contain;
 
