--- a/src/index.css
+++ b/src/index.css
@@ -4,9 +4,8 @@
 
 :root {
   /* colors */
-  --main-color:  #4586f7;
+  --main-color:  #9d8110;
   /* --main-color:  #2f8872; */
-
 
   --primary-background-clr: white;
   --secondary-background-clr: var(--main-color);
@@ -18,21 +17,22 @@
 
   
   /* font-sizes */
-  --fs-900: 3.5rem;
-  --fs-800: 3rem;
-  --fs-700: 2.5rem;
-  --fs-600: 2rem;
-  --fs-500: 1.75rem;
-  --fs-400: 1.5rem;
+  --fs-900: 3rem;
+  --fs-800: 2.15rem;
+  --fs-700: 2rem;
+  --fs-600: 1.75rem;
+  --fs-500: 1.5rem;
+  --fs-400: 1.4rem;
   --fs-300: 1.25rem;
   --fs-200: 1.15rem;
   --fs-100: 1rem;
 
   
   /* font-families */
-  --ff-laila-serif: "Laila", serif;
-  --ff-sans-cond: "Barlow Condensed", sans-serif;
-  --ff-sans-normal: "Barlow", sans-serif;
+  --ff-primary-font: "Laila", serif;
+  --ff-secondary-font: "Roboto", sans-serif;;
+
+
 
 }
 *{
