--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -2,31 +2,34 @@
     width: 1200px;
     height: 180px;
     padding: 15px 15px 20px 15px;
-    
-     display: flex;
-     flex-direction: column;
-     justify-content: space-between;
-     gap: 10px;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 10px;
 
     position: absolute;
     z-index: 1;
 
-
-    background-color: rgba(255, 255, 255, 0.8) ;
-
-
+    background-color: rgba(255, 255, 255, 0.8);
     border-radius: 8px;
     box-shadow: 2px 2px 20px rgb(177, 177, 177);
 }
-
 
 .headerContainer_row1 {
     width: 100%;
     height: fit-content;
     margin: 0;
-  
+
     display: flex;
     justify-content: space-between;
+}
+.header-group1{
+    width: 20%;
+    display: flex;
+    padding-top: 10px;
+
+    border: 1px solid red;
 
 }
 
@@ -34,8 +37,14 @@
     width: 100%;
     height: fit-content;
     margin: 0;
-  
+
     display: flex;
     justify-content: space-between;
 }
+
+
+
+
+
+
 
