--- a/src/components/headerComponents/CartList.css
+++ b/src/components/headerComponents/CartList.css
@@ -1,45 +1,58 @@
 .cardListContainer {
-    width: 5%;
-    height: fit-content;
-
-    padding-top: 10px;
+    width: 25%;
+    height: 100%;
 
     position: relative;
-    top: 10%;
+    /* border: 1px solid red; */
+
+}
+
+.cartList-iconCart{
+height: 50px;
+border: 1px solid red;
+
 }
 
 .cardIcon {
-    width: 80%;
+    width: 35px;
+    margin-top: 10px;
     z-index: -1;
 }
 
 .itemQty {
     width: 25px;
     height: 25px;
+    font-family: var(--ff-secondary-font);
+    font-size: var(--fs-100);
+
+
     border-radius: 50%;
     border: 4px solid rgb(255, 255, 255);
     background-color: rgb(255, 0, 0);
     position: absolute;
-    place-items: center;
     top: 0px;
-    right: 10px;
+    right: 5px;
 
     text-align: center;
     align-content: center;
     color: white;
-    font-size: var(--fs-100);
-    font-weight: 700;
+   
+    font-weight: 600;
 }
 
 .cartList {
     visibility: hidden;
-    width: 280px;
-    height: 400px;
+    width: 295px;
+    height: fit-content;
+    padding-left: 20px;
+    padding-bottom: 20px;
+
     background-color: rgb(255, 255, 255);
     box-shadow: 2px 2px 10px rgb(209, 209, 209);
 
     position: absolute;
     transform: translateX(-250px);
+
 }
 
 /* Cart List *************************************** */
@@ -49,40 +62,40 @@
 
 .cartList_list {
     width: 100%;
-    max-height: 73%;
+    max-height: 390px;
+
+    margin-bottom: 20px;
     overflow: auto;
+
+    padding-top: 20px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+
 
     /* width */
     &::-webkit-scrollbar {
         width: 5px;
     }
+
     /* Handle */
     &::-webkit-scrollbar-thumb {
         background: var(--secondary-background-clr);
     }
 }
 
-.cartList_list-item {
-    width: 100%;
-    height: 45px;
-    background-color: antiquewhite;
-}
+
 
 /* ************************************************* */
 .cartList_bottom {
     width: 100%;
     height: 25%;
-    position: absolute;
-    bottom: 0;
+    padding-right: 20px;
 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 5px;
-
-    border-top: 2px solid rgb(203, 203, 203);
-
 }
 
 /* ************************************************************ */
@@ -91,8 +104,6 @@
 .cartList_bottom-checkout {
     width: 100%;
     height: 40px;
-
-    /* border: 1px solid red; */
 }
 
 /* ************************************************************ */
@@ -108,22 +119,106 @@
 .cartList_bottom-checkout:hover {
     background: var(--secondary-background-clr);
     opacity: 0.8;
-
 }
 
 /* ************************************************************ */
 
+.cartList_list-item {
+    width: 100%;
+    height: fit-content;
+
+    background-color: rgb(255, 255, 255);
+    border-bottom: 1px solid rgb(207, 207, 207);
+
+    padding: 15px 0px;
+    display: flex;
+
+}
+
+.cartList_list-item-col1 {
+    width: 110px;
+
+    display: flex;
+}
+
+.cartList_list-item-col2 {
+    width: 145px;
+
+    display: flex;
+    flex-direction: column;
+}
+
+.cartList_list-item-delete {
+    width: 18px;
+    height: 18px;
+    cursor: pointer;
+}
+
+.cartList_list-item-imagebg {
+    width: 70px;
+    height: 70px;
+
+    background-color: rgb(255, 246, 246);
+
+    display: flex;
+}
+
+.cartList_list-item-image {
+    width: 30px;
+
+    position: relative;
+    margin: auto;
+}
+
+.cartList_list-item-name {
+    font-size: var(--fs-400);
+    font-weight: 500;
+    color: rgb(85, 85, 85);
+    margin: 0;
+}
+
+.cartList_list-item-pricecontain {
+    display: flex;
+    gap: 10px;
+    font-size: var(--fs-300);
+    font-family: var(--ff-secondary-font);
+
+}
+
+.cartList_list-item-price {
+    padding: 10px 0;
+    margin: 0;
+    color: var(--active-text-color);
+}
+
+.cartList_list-item-qty {
+    padding: 10px 0;
+    margin: 0;
+    color: rgb(174, 174, 174);
+}
+
+/* ************************************************************ */
 .cartList_bottom-sum {
     padding: 0 30px;
-    font-size: var(--fs-400);
-
+    font-family: var(--ff-secondary-font);
+    font-size: var(--fs-500);
 
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
+
+    border-top: 2px solid rgb(211, 211, 211);
 }
 
 .cartList_bottom-sumText,
 .cartList_bottom-sumPrice {
     align-content: center;
+}
+.cartList_bottom-sumPrice {
+   color: var(--active-text-color);
+}
+
+.cartList_list-noitem{
+    font-size: var(--fs-300);
+    padding-top: 10px;
 }
