--- a/src/components/footerComponents/ServicesBanner.css
+++ b/src/components/footerComponents/ServicesBanner.css
@@ -23,13 +23,15 @@
     width: 60px;
     height: 60px;
 
-    transition: 2s;
-    transform: rotate(0deg);
+    transition: 0.1s;
+    transform: rotateY(0deg);
+    /* background-color: aquamarine; */
+
 
 }
 
 .servicesImage:hover{
-    transform: rotate(90deg);
+    transform: rotateY(90deg)
 
 }
 
