--- a/src/components/headerComponents/AboutUs.css
+++ b/src/components/headerComponents/AboutUs.css
@@ -64,7 +64,7 @@
         display: block;
         position: relative;
 
-        border: 1px solid red;
+        /* border: 1px solid red; */
 
     }
 
