--- a/src/components/headerComponents/LogIn.css
+++ b/src/components/headerComponents/LogIn.css
@@ -6,7 +6,7 @@ padding-top: 10px;
     display: flex;
     justify-content: end;
 
-    border: 1px solid red;
+    /* border: 1px solid red; */
 }
 
 .loginBtn, .singinBtn { 
