--- a/src/components/footerComponents/ServicesBanner.css
+++ b/src/components/footerComponents/ServicesBanner.css
@@ -19,9 +19,22 @@
 }
 
 .servicesImage{
+    cursor: pointer;
     width: 60px;
     height: 60px;
+
+    transition: 0.1s;
+    transform: rotateY(0deg);
+    /* background-color: aquamarine; */
+
+
 }
+
+.servicesImage:hover{
+    transform: rotateY(90deg)
+
+}
+
 
 .servicesName {
     width: 180px;
