--- a/src/components/headerComponents/CartList.css
+++ b/src/components/headerComponents/CartList.css
@@ -1,4 +1,4 @@
-.cardListContainer {
+.cartListContainer {
     width: 25%;
     height: 100%;
 
@@ -9,14 +9,15 @@
 
 .cartList-iconCart{
 height: 50px;
-border: 1px solid red;
+/* border: 1px solid red; */
 
 }
 
-.cardIcon {
+.cartIcon {
     width: 35px;
     margin-top: 10px;
     z-index: -1;
+    color: var(--secondary-background-clr);
 }
 
 .itemQty {
@@ -56,7 +57,7 @@ border: 1px solid red;
 }
 
 /* Cart List *************************************** */
-.cardListContainer:hover>.cartList {
+.cartListContainer:hover>.cartList {
     visibility: visible;
 }
 
@@ -158,13 +159,15 @@ border: 1px solid red;
     width: 70px;
     height: 70px;
 
-    background-color: rgb(255, 246, 246);
+    background-color: rgb(230, 238, 237);
+
+    /* border: 1px solid gray; */
 
     display: flex;
 }
 
 .cartList_list-item-image {
-    width: 30px;
+    height: 50px;
 
     position: relative;
     margin: auto;
@@ -180,7 +183,7 @@ border: 1px solid red;
 .cartList_list-item-pricecontain {
     display: flex;
     gap: 10px;
-    font-size: var(--fs-300);
+    font-size: var(--fs-400);
     font-family: var(--ff-secondary-font);
 
 }
@@ -219,6 +222,6 @@ border: 1px solid red;
 }
 
 .cartList_list-noitem{
-    font-size: var(--fs-300);
+    font-size: var(--fs-400);
     padding-top: 10px;
 }
