--- a/src/components/headerComponents/SearchBox.css
+++ b/src/components/headerComponents/SearchBox.css
@@ -2,7 +2,7 @@
     width: 55%;
     display: flex;
     justify-content: center;
-    border: 1px solid red;
+    /* border: 1px solid red; */
 
 }
 
