--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
 
 :root {
   /* colors */
-  --main-color:  #a39458;
+  --main-color:  #57A399;
   /* --main-color:  #2f8872; */
 
   --primary-background-clr: white;
@@ -21,7 +21,7 @@
   --fs-800: 2.15rem;
   --fs-700: 2rem;
   --fs-600: 1.75rem;
-  --fs-500: 1.5rem;
+  --fs-500: 1.6rem;
   --fs-400: 1.4rem;
   --fs-300: 1.25rem;
   --fs-200: 1.15rem;
