update news page

--- a/src/index.css
+++ b/src/index.css
@@ -30,7 +30,8 @@
   
   /* font-families */
   --ff-primary-font: "Laila", serif;
-  --ff-secondary-font: "Roboto", sans-serif;;
+  --ff-secondary-font: "Roboto", sans-serif;
+  --ff-news-font: "Mulish", sans-serif;
 
 
 
