--- a/src/pages/extra_pages/NewsContent.css
+++ b/src/pages/extra_pages/NewsContent.css
@@ -1,4 +1,56 @@
-.NewsContent-container{
+.NewsContent-container {
     width: 1200px;
+    background-color: rgb(249, 251, 250);
+    border: 1px solid rgb(191, 251, 234);
+
+    font-family: var(--ff-news-font);
+
+    padding: 30px 0;
+
+    a, a:hover, a:focus, a:active {
+        text-decoration: none;
+        color: inherit;
+        cursor:pointer;
+   }
 }
 
+.NewsContent-content{
+    padding: 0 15px;
+}
+
+.contentnewTitle {
+    width: 100%;
+    h4{
+        text-decoration: none;
+        color: var(--active-text-color);
+        font-size: var(--fs-900);
+        font-weight: bold;
+    }
+    .meta1{
+        h6{
+            font-size: var(--fs-300);
+            text-decoration: none;
+        }
+        margin-bottom: 25px;
+    }
+    .Title1{
+        font-size: var(--fs-600);
+        font-weight: 500;
+    }
+}
+
+.contentnewTitle1 {
+    font-size: var(--fs-600);
+    font-weight: 400;
+
+    img{
+        width: 100%;
+    }
+
+
+}
+
+.NewsContent-sidebar{
+    height: 500px;
+    background-color: aqua;
+}
