--- a/src/components/newspageComponents/NewsReadLot.css
+++ b/src/components/newspageComponents/NewsReadLot.css
@@ -42,7 +42,7 @@
 
 .newsPage-newsReadLot-img{
     width: 100%;
-    height: 100%;
+    height: 185px;
     object-fit: fill;
     border-radius: 10px;
 
@@ -50,23 +50,24 @@
 
 .newsPage-newsReadLot-title{
     visibility: hidden;
-}
-.newsPage-newsReadLot-nav:hover>.newsPage-newsReadLot-title{
-    visibility: visible;
     border: none;
     background-color: rgba(62, 62, 62, 0.6);
     
-    padding: 5px;
+    padding: 5px 10px;
 
     position: absolute;
     bottom: 5px;
     left: 0;
+    right: 0;
 
     text-align: left;
     color: var(--secondary-text-color);
     font-size: var(--fs-200);
-
 }
+.newsPage-newsReadLot-nav:hover>.newsPage-newsReadLot-title{
+    visibility: visible;
+}
+
 .newsPage-newsReadLot-posted{
     width: 95%;
     padding: 0 10px;
