--- a/src/components/newspageComponents/InterestedNews2.css
+++ b/src/components/newspageComponents/InterestedNews2.css
@@ -1,4 +1,4 @@
-.newsPage-newsReadLot{
+.interestedNews2-newsReadLot{
     width: 100%;
 
     display: flex;
@@ -6,33 +6,33 @@
     align-items: center;
 
 }
-.newsPage-newsReadLot-name{
+.interestedNews2-newsReadLot-name{
     width: 100%;
     text-align: center;
     font-size: var(--fs-900);
     color: var(--active-text-color);
     font-weight: bold;
+    font-style: italic;
 
-    border-bottom: 3px solid var(--active-text-color);
+    border-bottom: 2px solid var(--active-text-color);
     margin-bottom: 30px;
 }
-.newsPage-newsReadLot-container{
+.interestedNews2-newsReadLot-container{
     display: flex;
     justify-content: space-around;
 }
 
-.newsPage-newsReadLot-newscard{
+.interestedNews2-newsReadLot-newscard{
     width: 285px;
     height: 382.19px;
 
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 5px;
     border-radius: 10px;
 }
 
-.newsPage-newsReadLot-nav{
+.interestedNews2-newsReadLot-nav{
     border: none;
     width: 95%;
     height: 185px;
@@ -41,7 +41,7 @@
     position: relative;
 }
 
-.newsPage-newsReadLot-img{
+.interestedNews2-newsReadLot-img{
     width: 100%;
     height: 185px;
     object-fit: fill;
@@ -49,7 +49,7 @@
 
 }
 
-.newsPage-newsReadLot-title{
+.interestedNews2-newsReadLot-title{
     visibility: hidden;
     border: none;
     background-color: rgba(62, 62, 62, 0.6);
@@ -65,16 +65,16 @@
     color: var(--secondary-text-color);
     font-size: var(--fs-200);
 }
-.newsPage-newsReadLot-nav:hover>.newsPage-newsReadLot-title{
+.interestedNews2-newsReadLot-nav:hover>.interestedNews2-newsReadLot-title{
     visibility: visible;
 }
 
-.newsPage-newsReadLot-posted{
+.interestedNews2-newsReadLot-posted{
     width: 95%;
     padding: 0 5px;
     font-style: italic;
 }
-.newsPage-newsReadLot-content{
+.interestedNews2-newsReadLot-content{
     width: 95%;
     padding: 0 5px;
     font-size: var(--fs-400);
