--- a/src/components/newspageComponents/RelatedNews.css
+++ b/src/components/newspageComponents/RelatedNews.css
@@ -1,29 +1,59 @@
-.relatedNews{
+.relatedNews {
     width: 100%;
+}
 
+.relatedNews-name {
+    font-style: italic;
+    font-size: var(--fs-700);
 }
-.relatedNews-container{
-}
-.relatedNews-name{
+
+.relatedNews-container {
+    width: 100%;
     
 }
-.relatedNews-newscard{
 
-    width: 100%;
-    height: 105px;
+.relatedNews-newscard {
+    height: 110px;
+    padding: 10px;
     display: flex;
+    align-items: center;
+    border-bottom: 2px solid var(--secondary-background-clr);
 }
+
 .relatedNews-img{
     width: 100px;
     height: 80px;
+
+
+
+    cursor: pointer;
+
+    object-fit: fill;
+    border-radius: 10px;
 }
-.relatedNews-content{
+
+.relatedNews-content {
+    height: 80px;
+    padding-left: 15px;
+
     display: flex;
     flex-direction: column;
-}
-.relatedNews-title{
+    justify-content: space-between;
 
 }
-.relatedNews-desc{
+
+.relatedNews-title {
+    border: none;
+    background: none;
+    cursor: pointer;
+    font-size: var(--fs-400);
+
+    text-align: left;
+
+}
+
+.relatedNews-desc {
+    margin: 0;
+    font-size: var(--fs-300);
 
 }
