--- a/src/pages/extra_pages/NewsContent.css
+++ b/src/pages/extra_pages/NewsContent.css
@@ -16,6 +16,7 @@
 
 .NewsContent-content{
     padding: 0 15px;
+    margin-bottom: 50px;
 }
 
 .contentnewTitle {
@@ -54,6 +55,10 @@
 }
 
 .NewsContent-sidebar{
-    height: 500px;
-    background-color: aqua;
+    padding: 30px 0;
+    margin-bottom: 50px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
 }
