--- a/src/components/homepageComponents/ProductCard.css
+++ b/src/components/homepageComponents/ProductCard.css
@@ -1,86 +1,140 @@
 .homepage-productCard-price {
-    color: rgb(255, 48, 48);
-    font-size: var(--fs-500);
-    /* font-weight:  */
+	color: rgb(255, 48, 48);
+	font-size: var(--fs-500);
+	/* font-weight:  */
 }
 
 .homepage-productCard-name {
-    font-size: var(--fs-500);
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    /* number of lines to show */
-    line-clamp: 1;
-    -webkit-box-orient: vertical;
+	font-size: var(--fs-500);
+	overflow: hidden;
+	display: -webkit-box;
+	-webkit-line-clamp: 1;
+	/* number of lines to show */
+	line-clamp: 1;
+	-webkit-box-orient: vertical;
 }
 
 .homepage-productCard {
-    /* background: blue; */
-    display: flex;
-    max-width: 140px;
-    max-height: 250px;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
-    min-width: 50px;
-    margin: 0px;
-    padding: 0;
+	/* background: blue; */
+	display: flex;
+	max-width: 140px;
+	max-height: 250px;
+	justify-content: center;
+	align-items: center;
+	align-content: center;
+	min-width: 50px;
+	margin: 0px;
+	padding: 0;
 }
 
 .homepage-productCard-imgContainer {
-    max-height: 180px;
-    overflow: hidden;
-    position: relative;
+	max-height: 180px;
+	overflow: hidden;
+	position: relative;
 
-    /* background: red; */
-    .productCard-button-container {
-        /* display: none; */
-        opacity: 0%;
-        height: 30px;
-        width: 100%;
-        position: absolute;
-        bottom: 20px;
-        align-content: center;
+	/* background: red; */
+	.productCard-button-container {
+		/* display: none; */
+		opacity: 0%;
+		height: 30px;
+		width: 100%;
+		position: absolute;
+		bottom: 20px;
+		align-content: center;
+	}
 
-    }
-
-    .productCard-button1 {
-        width: 30px;
-        padding: 3px;
-        border-radius: 5px;
-        margin: 0px 2px;
-    }
+	.productCard-button1 {
+		width: 30px;
+		padding: 3px;
+		border-radius: 5px;
+		margin: 0px 2px;
+	}
 }
 
 .homepage-productCard:hover {
-    cursor: pointer;
-    transition: all 0.3s;
-    /* translate: -3px -3px; */
-    box-shadow: 10px 10px 3px #dddddd;
-    border-radius: 20px;
-    background: rgb(248, 248, 248);
+	cursor: pointer;
+	transition: all 0.3s;
+	/* translate: -3px -3px; */
+	box-shadow: 10px 10px 3px #dddddd;
+	border-radius: 20px;
+	background: rgb(248, 248, 248);
 
-    .productCard-button-container {
-        transition: all 1s;
-        /* display: block; */
-        opacity: 100%;
-    }
+	.productCard-button-container {
+		transition: all 1s;
+		/* display: block; */
+		opacity: 100%;
+	}
 
-    .homepage-productCard-img {
-        filter: opacity(0.5);
-    }
+	.homepage-productCard-img {
+		filter: opacity(0.5);
+	}
 }
 
 .productCard-button1:hover {
-    transition: all 0.3s;
-    background: rgb(200, 200, 200);
+	transition: all 0.3s;
+	background: rgb(200, 200, 200);
 }
 
 .homepage-productCard-img {
-
-    max-width: 140px;
-    max-height: 150px;
-    min-width: 50px;
-    min-height: 150px;
-    object-fit: contain;
+	max-width: 140px;
+	max-height: 150px;
+	min-width: 50px;
+	min-height: 150px;
+	object-fit: contain;
+}
+.carousel-inner.carda {
+	margin: auto;
+	overflow: hidden;
+	align-items: center;
+	/* height: 500px; */
+	object-fit: contain;
+	width: 100%;
+	.largeImg {
+		min-height: 400px;
+		max-height: 400px;
+		object-fit: contain;
+	}
+}
+.carousel-indicators.carda {
+	width: 100%;
+	height: 150px;
+	position: static;
+	margin: 2px auto;
+	display: flex;
+	align-items: center;
+	.thumbnail{
+		height: fit-content;
+		/* background: red; */
+		width: 25%;
+	}
+	.thumbImg {
+		max-height: 100px;
+		object-fit: contain;
+	}
+	button.thumbnail{
+		background: white;
+		/* padding: 1px; */
+		border-radius: 10px;
+		box-shadow: 0 0 5px 3px var( --secondary-background-clr);
+	}
+	button.thumbnail:not(.active){
+		opacity: 0.8;
+		box-shadow: none;
+		filter: grayscale(50%);
+	}
+	button.thumbnail:hover{
+		box-shadow: 0 0 5px 3px var( --secondary-background-clr);
+	}
+}
+.modal-priceTag{
+	background:  var( --secondary-background-clr);
+	transform: skew(15deg);
+	/* width: 100%; */
+	width: fit-content;
+	.modal-priceTag-text{
+			transform: skew(-25deg);
+			text-transform: uppercase;
+			color: var(--secondary-text-color);
+			letter-spacing: 1px;
+	}
 }
