--- a/src/components/filterComponents/SortSelect.css
+++ b/src/components/filterComponents/SortSelect.css
@@ -1,15 +1,17 @@
 .sortSelect-container {
-    width: 180px;
+    width: 250px;
 
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
     column-gap: 10px;
 
     position: relative;
     font-family: var(--ff-secondary-font);
+    font-size: var(--fs-600);
 
+    border-radius: 5px;
 }
 
 
@@ -18,7 +20,7 @@
 }
 
 .sortSelect-select {
-    width: 120px;
+    width: 160px;
     cursor: pointer;
     margin: 0;
     display: flex;
@@ -49,6 +51,7 @@
 
     position: absolute;
     top: 25px;
+    right: 0;
     background-color: aliceblue;
 
     z-index: 1;
