--- a/src/pages/extra_pages/SearchPage.css
+++ b/src/pages/extra_pages/SearchPage.css
@@ -1,5 +1,8 @@
 .searchPage-container{
     width: 1200px;
+
+    background-color: rgb(241, 252, 246);
+    border: 1px solid rgb(191, 251, 234);
 }
 .searchPage-result{
     font-weight: 700;
@@ -8,7 +11,9 @@
 }
 .searchPage-searchlist{
     width: 100%;
+    padding: 10px 30px;
+
     display: flex;
     flex-wrap: wrap;
-    gap: 10px;
+    gap: 25px;
 }
