--- a/src/components/filterComponents/SortSelect.css
+++ b/src/components/filterComponents/SortSelect.css
@@ -9,7 +9,7 @@
 
     position: relative;
     font-family: var(--ff-secondary-font);
-    font-size: var(--fs-600);
+    font-size: var(--fs-500);
 
     border-radius: 5px;
 }
@@ -45,14 +45,15 @@
 
 .sortSelect-list {
     display: none;
-    width: 70%;
+    width: 100%;
     border-radius: 5px;
-    padding: 10px;
+    padding: 10px 20px;
 
     position: absolute;
     top: 25px;
     right: 0;
-    background-color: aliceblue;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(227, 227, 227);
 
     z-index: 1;
 }
