--- a/src/components/filterComponents/TypeFilterAll.css
+++ b/src/components/filterComponents/TypeFilterAll.css
@@ -4,24 +4,24 @@
 }
 
 .typeFilterAll-head {
-    width: fit-content;
+    width: 100%;
     border: none;
     border-bottom: 2px solid rgb(197, 197, 197);
-
-    background:  var( --secondary-background-clr);
-    transform: skew(30deg);
-
-    padding: 2px;
+    margin-bottom: 10px;
 }
 
 .typeFilterAll-title {
     width: 100px;
     margin: 0;
+    padding: 5px 0;
     text-align: center;
 
     font-size: var(--fs-600);
+    font-style: italic;
 
-    transform: skew(-30deg);
+    transform: skew(15deg);
+    background:  var( --secondary-background-clr);
+
     text-transform: uppercase;
     color: var(--secondary-text-color);
     letter-spacing: 1px;
