--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -9,9 +9,9 @@
     gap: 10px;
 
     position: absolute;
-    z-index: 1;
+    z-index: 2;
 
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(255, 255, 255, 1);
     border-radius: 8px;
     box-shadow: 2px 2px 20px rgb(177, 177, 177);
 }
@@ -29,7 +29,7 @@
     display: flex;
     padding-top: 10px;
 
-    border: 1px solid red;
+    /* border: 1px solid red; */
 
 }
 
