--- a/src/components/footerComponents/ServicesBanner.css
+++ b/src/components/footerComponents/ServicesBanner.css
@@ -19,19 +19,21 @@
 }
 
 .servicesImage{
-    cursor: pointer;
     width: 60px;
     height: 60px;
 
-    transition: 0.1s;
+    transition: 0.3s;
     transform: rotateY(0deg);
     /* background-color: aquamarine; */
 
 
 }
 
-.servicesImage:hover{
-    transform: rotateY(90deg)
+.delivery:hover>.servicesImage,
+.support:hover>.servicesImage,
+.exchange_return:hover>.servicesImage,
+.standardPrice:hover>.servicesImage{
+    transform: rotateY(360deg)
 
 }
 
