--- a/src/components/headerComponents/NavBar.css
+++ b/src/components/headerComponents/NavBar.css
@@ -90,3 +90,25 @@
 }
 
 
+
+/** Responsive ************************************************************************************ */
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (max-width: 1200px) {
+    .navItem{
+        font-size: var(--fs-300);
+    }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+    .navbarContainer{
+        display: none;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+}
+
+
