--- a/src/components/headerComponents/SearchBox.css
+++ b/src/components/headerComponents/SearchBox.css
@@ -55,3 +55,23 @@
     height: 40%;
 }
 
+
+
+/** Responsive ************************************************************************************ */
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (max-width: 1200px) {
+
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (max-width: 992px) {
+    
+    .searchContainer{
+        display: none;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+}
