--- a/src/components/headerComponents/AboutUs.css
+++ b/src/components/headerComponents/AboutUs.css
@@ -41,11 +41,6 @@
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (max-width: 1200px) {
-    .headerContainer {
-        width: 970px;
-    }
-
-    .navItem,
     .aboutUsBtn {
         font-size: var(--fs-300);
     }
@@ -53,65 +48,14 @@
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (max-width: 992px) {
-    .headerContainer {
-        width: 750px;
-        height: 116px;
-        padding: 0;
-    }
-
-    .headerContainer_row1 {
-        height: 100%;
-        display: block;
-        position: relative;
-
-        /* border: 1px solid red; */
-
-    }
-
-    .logoContainer {
-        position: relative;
-        margin: auto;
-    }
-
-    .header-group1{
-        width: 200px;
-    position: absolute;
-    right: 0;
-    top:20px;
-    
-    }
-
-    .loginContainer {
- 
-    }
-
-    .cardListContainer {
-   
-    }
-
-
-    .navbarContainer,
-    .aboutUsContainer,
-    .searchContainer,
-    .menuContainer {
+    .aboutUsContainer {
         display: none;
     }
 }
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (max-width: 768px) {
-    .headerContainer {
-        width: 100%;
-        height: 120px;
-    }
 
-    .header-group1{
-        width: 200px;
-    position: relative;
-    top: 0;
-    margin: auto;
-    
-    }
 }
 
 /* Extra small devices (phones, 600px and down) */
