--- a/src/components/headerComponents/MenuSearch.css
+++ b/src/components/headerComponents/MenuSearch.css
@@ -1,17 +1,17 @@
-.menuSearch-container{
+.menuSearch-container {
     visibility: hidden;
     width: 100%;
     z-index: 1;
 
     position: absolute;
-    top: 90px;    
+    top: 105px;
 
 }
 
-.menuSearch-icon{
+.menuSearch-icon {
     width: 100%;
-    height: 50px;
-    padding: 0 20px;
+    height: 40px;
+    padding: 25px 20px;
 
     display: flex;
     justify-content: space-between;
@@ -20,23 +20,112 @@
 
     background-color: var(--secondary-background-clr);
 }
-.menuSearch-menuIcon{
-    width: 25px;
+
+.menuSearch-menuIcon {
+    width: 18px;
+    cursor: pointer;
 }
 
-.menuSearch-searchIcon{
-    width: 25px;
+.menuSearch-searchIcon {
+    width: 18px;
+    cursor: pointer;
 }
-.menuSearch-search{
-}
-.menuSearch-searchInput{
+
+.menuSearch-search {}
+
+#menuSearch-searchInput {
     width: 100%;
+    height: 45px;
+    padding-left: 20px;
+    border: none;
     position: absolute;
+
+    &:focus {
+        outline: none;
+    }
+
+    z-index: -1;
 }
 
 
+.menuSearch-menuDetail {
+    width: 250px;
+    height: 100vh;
+    padding-top: 20px;
+    background-color: rgb(255, 255, 255);
+    transform: translateX(0px);
+
+    position: fixed;
+    top: 0;
+
+    .logoContainer {
+        width: 100%;
+        height: fit-content;
+        border-bottom: 2px solid gray;
+    }
+}
+
+.menuSearch-menuList {
+    width: 100%;
+    height: fit-content;
+    padding-top: 20px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+
+.menuSearch-menuTab {
+    width: 100%;
+    height: 40px;
+    padding-left: 20px;
+
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+.menuSearch-iconRedArrow::before {
+    content: "\f105";
+    font-family: "Font Awesome 5 free";
+    font-weight: 900;
+    align-content: center;
+
+    color: var(--secondary-background-clr);
+}
+
+.menuSearch-tabLink,
+.menuSearch-tabLink:hover{
+    text-decoration: none;
+
+    width: 80%;
+    height: 100%;
+    align-content: center;
+
+    color: var(--primary-text-color);
+    font-weight: bold;
+
+    transition: color 0.3s;
+}
+
+
+
+/** Responsive ************************************************************************************ */
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (max-width: 1200px) {}
+
+/* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (max-width: 992px) {
-    .menuSearch-container{
+    .menuSearch-container {
         visibility: visible;
+    }
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (max-width: 768px) {
+    .menuSearch-container {
+        position: absolute;
+        top: 120px;
     }
 }
