--- a/src/components/headerComponents/Menu.css
+++ b/src/components/headerComponents/Menu.css
@@ -108,46 +108,11 @@
     transition: color 0.3s;
 }
 
-
-.menuTab:hover,
-.menuTab:hover>.tabLink,
-.menuTab:hover>.iconRedArrow::before,
-.menuTab:hover>.iconBlackArrow::before {
-    background-color: var(--secondary-background-clr);
-    color: white;
+#menuTab_3,
+#menuTab_4{
+    padding-left: 40px;
 }
 
-.productsDetail {
-    visibility: visible;
-    width: fit-content;
-    height: fit-content;
-    padding: 20px;
-
-    background-color: rgb(255, 255, 255);
-    color: var(--primary-text-color);
-
-    display: flex;
-    gap: 20px;
-
-    position: absolute;
-    left: 290px;
-    top: 80px;
-
-    transform: rotateY(90deg);
-    opacity: 0%;
-    transition: 0.5s;
-
-}
-
-#menuTab_2:hover>.productsDetail,
-.productsDetail:hover {
-    visibility: visible;
-    opacity: 100%;
-
-    transform: rotateY(0deg);
-    /* transform: skewY(0deg); */
-
-}
 
 /** Responsive ************************************************************************************ */
 
